@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.inetcom.tv" name="[COLOR FF86BA0D]Inetcom.tv[/COLOR]" version="0.3.3" provider-name="Silhouette">
+<addon id="plugin.video.inetcom.tv" name="[COLOR FF86BA0D]Inetcom.tv[/COLOR]" version="0.3.4" provider-name="Silhouette">
   <requires><import addon="xbmc.python" version="2.1.0"/></requires>
   <extension point="xbmc.python.pluginsource"  provides="video" library="default.py"><provides>video</provides></extension>
-  <extension point="xbmc.addon.metadata">    <summary>Online TV from inetcom.tv</summary>
+  <extension point="xbmc.addon.metadata">
+    <summary>Online TV from inetcom.tv</summary>
     <description>Online TV from inetcom.tv</description>
     <platform>all</platform>
   </extension>
